@@ -8,6 +8,7 @@ import com.mongodb.client.model.Updates;
 import com.trixibackend.entity.Pet;
 import com.trixibackend.entity.Post;
 import com.trixibackend.entity.User;
+import jdk.jfr.Timestamp;
 import org.apache.commons.fileupload.FileItem;
 import org.bson.types.ObjectId;
 
@@ -16,7 +17,13 @@ import java.awt.image.BufferedImage;
 import java.io.*;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.text.DateFormat;
+import java.text.SimpleDateFormat;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
@@ -260,48 +267,63 @@ public class UserHandler {
         p.setPosts(null);
     }
 
-    public String uploadProfileImage(FileItem file) {
+    public String uploadProfileImage(List<FileItem> file) {
+
+        String fileUrl = null;
+
+        try {
+            for (FileItem item : file) {
+                if (item.isFormField()) {
+
+                    ByteArrayOutputStream output = new ByteArrayOutputStream();
+
+                    //getting the value
+                    String fieldValue = item.getString();
+
+                    //remove the ""
+                    String fieldValuRemove = fieldValue.replace("\"", "");
 
 
-        String fileUrl = file.getName();
+                    System.out.println(fieldValuRemove);
+                    System.out.println("Field: " + fieldValue);
+
+                    // replave /n with ;
+                    String replaveWhitespace = fieldValuRemove.replace("\\n", ";");
+                    String[] strs = replaveWhitespace.split(";");
+
+                    //cut the string to byteArray
+                    System.out.println("Substrings length:"+strs.length);
+                    for (int i=0; i < strs.length; i++) {
+                        System.out.println(strs[i]);
+
+                        output.write(Base64.getDecoder().decode(strs[i].getBytes()));
+                    }
+
+                    //decode the bytearray
+                    byte[] decodedImgLoop = output.toByteArray();
+
+                    System.out.println("outside " + decodedImgLoop);
+
+                    String name = new SimpleDateFormat("yyyyMMddHHmmss").format(Calendar.getInstance().getTime());
+
+                    String path = "resFolder/images/" + name + ".jpg" ;
 
 
 
-        try (var os = new FileOutputStream(Paths.get("ava.jpg").toString())) {
-            os.write(file.getInputStream().readAllBytes());
-        } catch (Exception e) {
-            e.printStackTrace();
-            return null;
-        }
+                    Path destinationFile = Paths.get(path);
+                    Files.createDirectories(destinationFile.getParent());
+                    Files.createFile(destinationFile);
+                    Files.write(destinationFile, decodedImgLoop);
 
-        return fileUrl;
-
-        /*InputStream inputStream = new ByteArrayInputStream(file.get());
-
-
-        StringBuilder textBuilder = new StringBuilder();
-        try (Reader reader = new BufferedReader(new InputStreamReader
-                (inputStream, Charset.forName(StandardCharsets.UTF_8.name())))) {
-            int c = 0;
-            while ((c = reader.read()) != -1) {
-                textBuilder.append((char) c);
+                    return path;
+                }
             }
         } catch (IOException e) {
             e.printStackTrace();
         }
 
-        String fileUrl = textBuilder.toString();
+        return fileUrl;
 
-        try(var os = new FileOutputStream(Paths.get("/src/images" + fileUrl).toString())){
-            os.write(file.get());
-        }catch (Exception e){
-            e.printStackTrace();
-            return null;
-        }
-
-        System.out.println("inhandler: " + fileUrl);
-
-        return fileUrl;*/
     }
 
 }
